# misp

./: Cargo.toml  flake.nix
misp_cli/: Cargo.toml
misp_cli/src/: main.rs
misp_common/: Cargo.toml
misp_common/src/: intern.rs  lib.rs  sexpr.rs  token.rs  value.rs
misp_executor/: Cargo.toml
misp_executor/src/: config.rs  environment.rs  func.rs  future.rs  instruction.rs  lib.rs  math.rs  operation.rs  value.rs
misp_executor/src/builtin/: combinatorics.rs  control.rs  func.rs  math.rs  mod.rs  trig.rs
misp_executor/src/cas/: expand.rs  mod.rs  simplify.rs
misp_executor/src/stdlib/: math.misp
misp_interner/: Cargo.toml
misp_interner/src/: lib.rs
misp_interp/: Cargo.toml
misp_interp/benches/: misp.rs
misp_interp/src/: lib.rs
misp_lexer/: Cargo.toml
misp_lexer/src/: lib.rs
misp_num/: Cargo.toml
misp_num/benches/: decimal.rs
misp_num/src/: decimal.rs  lib.rs  number.rs  rational.rs
misp_parser/: Cargo.toml
misp_parser/src/: lib.rs
