[package]
name = "misp_executor"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3.31"

misp_parser = { path = "../misp_parser" }
misp_num = { path = "../misp_num" }
misp_common = { path = "../misp_common" }
misp_interner = { path = "../misp_interner" }

heapless.workspace = true
thiserror.workspace = true
