[package]
name = "misp_interp"
version = "0.1.0"
edition = "2024"

[dependencies]
misp_lexer = { path = "../misp_lexer" }
misp_parser = { path = "../misp_parser" }
misp_executor = { path = "../misp_executor" }

thiserror.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "misp"
harness = false
