[package]
name = "misp_interp"
version = "0.1.0"
edition = "2024"

[dependencies]
misp_lexer = { path = "../misp_lexer" }
misp_parser = { path = "../misp_parser" }
misp_executor = { path = "../misp_executor" }
misp_common = { path = "../misp_common" }
misp_interner = { path = "../misp_interner" }
thiserror.workspace = true
itertools = { version = "0.14.0", default-features = false, features = [ "use_alloc" ] }

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "misp"
harness = false
